--- a/static/sass/modules/_results.sass
+++ b/static/sass/modules/_results.sass
@@ -15,6 +15,16 @@
         .hit-main
             background-color: lighten(#c0c0c0, 15%)
             padding: 15px
+            height: 250px
+            .img-holder
+                width: 50%
+                float: right
+                .img-fluid
+                    max-width: 30%
+                    float: right
+            .main-text
+                width: 50%
+                
         footer
             border-top: 3px solid black
             color: #FFF
