--- a/templates/stats.html
+++ b/templates/stats.html
@@ -6,16 +6,21 @@
 <main>
 <h1>Statistics</h1>
 <button class="btn btn-danger" onClick="resetchart()">RESET</button>
-<section>
-    <h2>Number of recipies per difficulty</h2>
-    <div id="difficultychart">
-       
+<div class="container">
+    <div class="row">
+        <h2>Number of recipies per difficulty</h2>
+        <br/>
+        <div id="difficultychart">
+            
+        </div>
+
+        <h2>Number of recipies per mealtype</h2>
+        <br/>
+        <div id="mealtypechart"></div>
     </div>
-</section>
-<section>
-    <h2>Number of recipies per mealtype</h2>
-    <div id="mealtypechart"></div>
-</section>    
+</div>
+    
+    
 <button class="btn btn-danger" onClick="resetchart()">RESET</button>
 </main>
 
