--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1361,15 +1361,22 @@ html {
   flex-wrap: wrap;
   margin-right: -15px;
   margin-left: -15px;
-  display: inline-flex; }
+  display: inline-flex;
+  margin: -5px -5px 0 0; }
 
-.card-wrapper {
-  flex: 0 0 50%;
-  max-width: 50%; }
-@media(max-width: 760px) {
+@media (min-width: 768px) and (max-width: 1999px) {
+  .card-wrapper {
+    flex: 0 0 50%;
+    max-width: 50%; } }
+@media (max-width: 767px) {
   .card-wrapper {
     flex: 0 0 100%;
     max-width: 100%; } }
+@media (min-width: 1200px) {
+  .card-wrapper {
+    flex: 0 0 25%;
+    max-width: 25%; } }
+
 .result-hits {
   flex: 0 0 79.1666666667%;
   max-width: 79.1666666667%; }
@@ -1391,7 +1398,16 @@ html {
       margin-bottom: 0; }
     .result-hits .result-hit .hit-main {
       background-color: #e6e6e6;
-      padding: 15px; }
+      padding: 15px;
+      height: 250px; }
+      .result-hits .result-hit .hit-main .img-holder {
+        width: 50%;
+        float: right; }
+        .result-hits .result-hit .hit-main .img-holder .img-fluid {
+          max-width: 30%;
+          float: right; }
+      .result-hits .result-hit .hit-main .main-text {
+        width: 50%; }
     .result-hits .result-hit footer {
       border-top: 3px solid black;
       color: #FFF; }
@@ -1433,15 +1449,13 @@ html {
     width: 100%; }
 
 #side_content {
-  flex: 0 0 33.3333333333%;
-  max-width: 33.3333333333%;
-  float: right;
-  display: inline-block; }
+  flex: 0 0 25%;
+  max-width: 25%;
+  float: right; }
 @media(max-width:768px) {
   #side_content {
     flex: 0 0 100%;
     max-width: 100%;
-    display: block;
     float: left; } }
   #side_content a {
     color: white; }
@@ -1451,13 +1465,14 @@ html {
 
 #main_content {
   flex: 0 0 66.6666666667%;
-  max-width: 66.6666666667%;
-  display: inline-block; }
+  max-width: 66.6666666667%; }
 @media(max-width:768px) {
   #main_content {
     flex: 0 0 100%;
-    max-width: 100%;
-    display: block; } }
+    max-width: 100%; } }
+  #main_content .img-holder {
+    max-width: 25%;
+    float: right; }
   #main_content .twocol-split {
     display: inline;
     flex: 0 0 50%;
